# macaqueretina

./: .gitignore  .gitlab-ci.yml  .lfsconfig  .readthedocs.yaml  LICENSE  README.md  codemeta.json  example.py  get_vae_models.sh  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
docs/: DoGFitExclusionCriteria.txt  How2UseBrianUnitsWithNeo.txt  mkdocs.yml
docs/examples/: example_experiment.py  example_gc_types.py  example_script.py  example_utility_functions.py  example_utility_methods.py  example_visualize.py  experiment_hpc.py  natural_movie.ipynb  simple_demo.ipynb
docs/src/: api.md  contribution.md  contributors.md  developer.md  example_experiment.md  example_gc_types.md  example_utility_methods.md  example_visualize.md  explanation_building.md  explanation_overview.md  explanation_simulate_retina.md  explanation_simulations.md  explanation_stimuli.md  explanation_visualization.md  index.md  installation.md  introduction.md  parameters.md  parameters_introduction.md  quickstart.md  references.md  simulations.md  stimuli.md
macaqueretina/: __init__.py  __init__.pyi  __main__.py  setup.py
macaqueretina/analysis/: __init__.py  analysis_module.py
macaqueretina/config/: config_manager.py  constants.yaml  core_parameters.yaml  experiment_parameters.yaml  param_reorganizer.py  param_validation.py  retina_parameters.yaml  visual_stim_parameters.yaml  visual_stimulus_parameters.yaml
macaqueretina/context/: context_module.py
macaqueretina/data_io/: __init__.py  config_io.py  data_io_module.py
macaqueretina/parameters/: constants.yaml  core_parameters.yaml  experimental_metadata.yaml  experimental_metadata_parameters.yaml  gain_calibration.yaml  literature.yaml  param_hpc_updater.py  param_reorganizer.py  param_validation.py  retina_parameters.yaml  retina_parameters_extend.yaml  signal_gain.yaml  simulation_parameters.yaml  visual_stimulus_parameters.yaml
macaqueretina/project/: __init__.py  project_conf_module.py  project_manager_module.py  project_utilities_module.py
macaqueretina/retina/: __init__.py  apricot_data_module.py  construct_retina_module.py  experimental_data_module.py  fit_module.py  retina_constructor_module.py  retina_math_module.py  retina_simulator_module.py  rf_repulsion_utils.py  simulate_retina_module.py  vae_module.py
macaqueretina/retina/apricot_statistics/: midget_off_circular_exp_univariate_stat.csv  midget_off_circular_temporal_multivariate_stat.csv  midget_off_ellipse_independent_exp_univariate_stat.csv  midget_off_vae_latent_data.npy  midget_on_circular_exp_cen_radius_mm.npy  midget_on_circular_exp_univariate_stat.csv  midget_on_circular_temporal_multivariate_stat.csv  midget_on_ellipse_fixed_spatial_multivariate_stat.csv  midget_on_ellipse_fixed_temporal_multivariate_stat.csv  midget_on_vae_latent_data.npy  parasol_off_circular_exp_cen_radius_mm.npy  parasol_off_circular_exp_univariate_stat.csv  parasol_off_circular_temporal_multivariate_stat.csv  parasol_off_ellipse_fixed_exp_cen_radius_mm.npy  parasol_off_ellipse_fixed_exp_univariate_stat.csv  parasol_off_ellipse_independent_spatial_multivariate_stat.csv  parasol_off_ellipse_independent_temporal_multivariate_stat.csv  parasol_off_vae_latent_data.npy  parasol_on_circular_exp_univariate_stat.csv  parasol_on_circular_spatial_multivariate_stat.csv  parasol_on_circular_temporal_multivariate_stat.csv  parasol_on_ellipse_fixed_exp_cen_radius_mm.npy  parasol_on_ellipse_fixed_spatial_multivariate_stat.csv  parasol_on_ellipse_independent_exp_cen_radius_mm.npy  parasol_on_ellipse_independent_exp_univariate_stat.csv  parasol_on_vae_latent_data.npy
macaqueretina/retina/dog_statistics/: midget_off_circular_exp_cen_radius_mm.npy  midget_off_circular_spatial_multivariate_stat.csv  midget_off_ellipse_fixed_exp_cen_radius_mm.npy  midget_off_ellipse_fixed_exp_univariate_stat.csv  midget_off_ellipse_fixed_spatial_multivariate_stat.csv  midget_off_ellipse_fixed_temporal_multivariate_stat.csv  midget_off_ellipse_independent_exp_cen_radius_mm.npy  midget_off_ellipse_independent_spatial_multivariate_stat.csv  midget_off_ellipse_independent_temporal_multivariate_stat.csv  midget_on_circular_spatial_multivariate_stat.csv  midget_on_ellipse_fixed_exp_cen_radius_mm.npy  midget_on_ellipse_fixed_exp_univariate_stat.csv  midget_on_ellipse_independent_exp_cen_radius_mm.npy  midget_on_ellipse_independent_exp_univariate_stat.csv  midget_on_ellipse_independent_spatial_multivariate_stat.csv  midget_on_ellipse_independent_temporal_multivariate_stat.csv  parasol_off_circular_spatial_multivariate_stat.csv  parasol_off_ellipse_fixed_spatial_multivariate_stat.csv  parasol_off_ellipse_fixed_temporal_multivariate_stat.csv  parasol_off_ellipse_independent_exp_cen_radius_mm.npy  parasol_off_ellipse_independent_exp_univariate_stat.csv  parasol_on_circular_exp_cen_radius_mm.npy  parasol_on_ellipse_fixed_exp_univariate_stat.csv  parasol_on_ellipse_fixed_temporal_multivariate_stat.csv  parasol_on_ellipse_independent_spatial_multivariate_stat.csv  parasol_on_ellipse_independent_temporal_multivariate_stat.csv
macaqueretina/retina/literature_data/: Angueyra_2013_NatNeurosci_Fig6B_c.npz  Angueyra_2013_NatNeurosci_Fig6E_c.npz  Angueyra_2022_JNeurosci_Fig2B_c.npz  Benardete_1997_VisNeurosci_midget.csv  Benardete_1999_VisNeurosci_parasol.csv  Boycott_1991_EurJNeurosci_Table1.csv  Goodchild_1996_JCompNeurol_Midget_DendDiam_Fig2B_c.npz  Lee_1989_JPhysiol_Fig3A_c.npz  (+21 more)
macaqueretina/stimuli/: __init__.py  experiment_module.py  stimulus_factory_module.py  visual_stimulus_module.py
macaqueretina/viz/: __init__.py  viz_module.py
tests/integration_tests/: test_construct_retina.py  test_construct_retina_cpu.py  test_construct_retina_cuda.py  test_retina_constructor_cpu.py  test_retina_constructor_cuda.py  test_retina_simulator_cpu.py  test_retina_simulator_cuda.py  test_simulation.py  test_simulation_cpu.py  test_simulation_cuda.py  test_stimulus_factory.py  test_visual_stimulus.py
tests/mock_data/: test_video_small.avi
tests/unit_tests/: test_configuration_object.py  test_param_hpc_updater.py  test_project_utilities.py
(+86 files in other folders)
