[tool.poetry]
name = "macaqueretina"
version = "0.6.0"  # Replace with dynamic version extraction if possible
description = "Python software to build a model of macaque retina and convert visual stimuli to cortical input"
authors = ["Simo Vanni <simo.vanni@helsinki.fi>", "Henri Hokkanen"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/VisualNeuroscience-UH/MacaqueRetina"
repository = "https://github.com/VisualNeuroscience-UH/MacaqueRetina"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[tool.poetry.dependencies]
brian2 = "2.7.1"
brian2cuda = "^1.0a6"
colorednoise = "*"
cython = "^3.0.11"
h5py = "*"
imageio = "*"
ipython = "*"
isort = "*"
matplotlib = "*"
numpy = "*"
opencv-python-headless = "*"
pandas = "*"
Pillow = "*"
pydantic = "^2.11.7"
pyshortcuts = "*"
pytest = "*"
python = "^3.11"
pyqt5 = "^5.15.11"
scikit-image = "*"
scikit-learn = "*"
scipy = "*"
seaborn = "*"
Shapely = "*"
torch = "*"
torch-fidelity = "*"
torchmetrics = "*"
torchsummary = "*"
torchaudio = "*"
torchvision = "*"
tomli = "^2.2.1"
tqdm = "*"

[tool.poetry.scripts]
run_macaqueretina = "project.project_conf_module:main"

[tool.poetry.group.dev.dependencies]
click = "8.2.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.21"
mkdocstrings-python = "^1.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = [
    "numpy", "pandas", "matplotlib", "scipy", "torch", "torchvision", 
    "torchmetrics", "torchsummary", "torchaudio", "opencv", "cv2", 
    "imageio", "seaborn", "scikit-image", "scikit-learn", "PIL", 
    "Pillow", "h5py", "Shapely", "tqdm", "colorednoise", "brian2", 
    "brian2cuda", "ipython", "jupyterlab", 
    "notebook", "pyshortcuts"
]
known_localfolder = ["macaqueretina"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
import_heading_stdlib = "Built-in"
import_heading_thirdparty = "Third-party"
import_heading_localfolder = "Local"