[tool.poetry]
name = "macaqueretina"
version = "1.0.7"
description = "Python software to build a model of macaque retina and convert visual stimuli to cortical input"
authors = ["Henri Hokkanen", "Simo Vanni <simo.vanni@helsinki.fi>", "Francescangelo Vedele <francescangelo.vedele@helsinki.fi>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/VisualNeuroscience-UH/macaqueretina"
repository = "https://github.com/VisualNeuroscience-UH/macaqueretina"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[tool.poetry.dependencies]
brian2 = "2.10.1"
brian2cuda = "^1.0b1"
h5py = "*"
imageio = "*"
ipython = "*"
matplotlib = "*"
numpy = "^2.3.0"
opencv-python-headless = "*"
pandas = "*"
Pillow = "*"
pydantic = "^2.11.7"
pyshortcuts = "*"
pytest = "*"
python = ">=3.14,<3.15"
pyqt5 = "^5.15.11"
scikit-image = "0.26.0rc1"
scikit-learn = "*"
scipy = "*"
seaborn = "*"
Shapely = "*"
torch = "^2.9"
torch-fidelity = "*"
torchmetrics = "*"
torchsummary = "*"
torchaudio = "^2.9"
torchvision = "*"
tomli = "^2.2.1"
triton = ">=3.5.0"  
tqdm = "*"
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
click = "8.2.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.21"
mkdocstrings-python = "^1.18.2"
ruff = "^0.6.0"

[tool.poetry.scripts]
run_macaqueretina = "project.project_manager_module:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88 
lint.select = ["E", "F", "W", "I", "UP", "B"]
lint.ignore = ["E501","E722", "F811"]
indent-width = 4

[tool.ruff.lint.isort]
known-third-party = [
    "numpy", "pandas", "matplotlib", "scipy", "torch", "torchvision",
    "torchmetrics", "torchsummary", "torchaudio", "opencv", "cv2",
    "imageio", "seaborn", "scikit-image", "scikit-learn", "PIL",
    "Pillow", "h5py", "Shapely", "tqdm", "brian2", "brian2cuda",
    "ipython", "pyshortcuts", "tomli", "pydantic"
]
known-local-folder = ["macaqueretina", "docs"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
